[gd_scene load_steps=7 format=3 uid="uid://dthqefa4o571d"]

[ext_resource type="Script" path="res://scenes/map_demo.gd" id="1_3164v"]
[ext_resource type="Texture2D" uid="uid://bgrqo10j554kt" path="res://addons/kenney_prototype_textures/green/texture_01.png" id="1_lp01w"]
[ext_resource type="Texture2D" uid="uid://dwn2mxr7iljop" path="res://addons/kenney_prototype_textures/orange/texture_04.png" id="2_lqww4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b1xaj"]
albedo_texture = ExtResource("1_lp01w")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7xngr"]
albedo_texture = ExtResource("2_lqww4")

[sub_resource type="Environment" id="Environment_pj5km"]
background_mode = 1
background_color = Color(0.498039, 0.788235, 0.941176, 1)
background_energy_multiplier = 1.05
ambient_light_color = Color(0.921569, 0.988235, 0.713726, 1)
reflected_light_source = 2
glow_enabled = true
glow_normalized = true

[node name="mapDemo" type="Node3D"]
script = ExtResource("1_3164v")

[node name="maps" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.5, 0)
material_override = SubResource("StandardMaterial3D_b1xaj")
use_collision = true
size = Vector3(20, 1, 20)

[node name="CSGBox3D2" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, -2.5, 0)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CSGBox3D3" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, -2.5, 0)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CSGBox3D6" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 7, -2.5, -2.5)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CSGBox3D7" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, -0.258819, 0.965926, 0, -0.965926, -0.258819, 7, -2.5, -5.5)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CSGBox3D4" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, -2.5, 2.5)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CSGBox3D5" type="CSGBox3D" parent="maps"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -2.5, 0, 1.5)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_7xngr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainMenu"]
layout_mode = 2
color = Color(0.188235, 0.298039, 0.415686, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2

[node name="host" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "host"

[node name="join" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "join"

[node name="address" type="LineEdit" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "enter ip"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pj5km")

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="CanvasLayer/MainMenu/VBoxContainer/address" to="." method="_on_address_text_submitted"]
